# donations-project

./: .gitignore  README.md  donation_video_vlm_pipeline_v4.py  llama_cpp_setup.md  pyproject.toml  requirements.txt  test_qwen_ocr.py  vlm_pipeline.py
archive/: donation_video_ocr_pipeline.py  donation_video_ocr_pipeline_v2.py
cpp/: CMakeLists.txt  build.sh  fast_detector.cpp
donsearcher/: __init__.py  __main__.py  dedup.py  events.py  geometry.py  pipeline.py  reports.py  textutil.py  training.py  vlm_client.py  vlm_events.py
prompts/: v10.txt  v6.txt  v7.txt  v8.txt  v9.txt
scripts/: bench_hwinfo.sh  bench_infer.py  bench_pipe.py  benchmark_detector.py  fast_pipeline.py  json_from_done_ocr.py  probe_download.sh  prompt_iter.py  server_bench_cpu.sh  server_bench_nvidia.sh  server_bench_sweep.sh  server_bench_vlm.sh  test_qwen_ocr.py  vlm_pipeline.py  vlm_pipeline_old.py  vlm_stage.py
